# yanashbelyak

./: .gitignore  0_revision.html  10_revision.html  1_revision.html  2_revision.html  3_revision.html  I0000.html  I0001.html  I0002.html  I0003.html  I0004.html  I0005.html  I0006.html  I0007.html  I0008.html  I0009.html  I0010.html  I0011.html  I0012.html  I0013.html  I0014.html  I0015.html  I0016.html  I0017.html  I0018.html  I0019.html  I0020.html  I0021.html  I0022.html  I0023.html  I0024.html  I0025.html  I0026.html  I0027.html  I0028.html  I0029.html  I0030.html  I0031.html  I0032.html  I0033.html  (+319 more)
author/: aleksandr-rakhmaev.html
category/: galereia.html  liudi.html  stati.html
content/: 0_revision.md  10_revision.md  1_revision.md  2_revision.md  3_revision.md  add_2_revision.md  add_3_and_4_revision.md  added_small_tree.md  appeal_for_the_repressed.md  persons_from_9_revision.md  repression.md  shulgin.md  world_war_1.md
content/pages/: about.rst  home.md  tree_of_the_village.rst
content/pages/persons/: PI345678.rst
content_generator/: biographer.py  content_generator.py  entities.py  gallery.py  gramps_tree.py  main.py  tree_render.py
content_generator/small_tree_render/: small_tree_render.py
content_generator/src/: biographer.py  entities.py  gallery.py  gramps_tree.py  small_tree_render.py  tree_render.py
content_generator/src/app/: entities.py
content_generator/src/app/interfaces/: tee_loader.py
content_generator/src/infra/: tree_loader.py
content_generator/src/presenters/: biographer.py  gallery.py  small_tree_render.py  tree_render.py
content_generator/src/small_tree_render/: small_tree_render.py
content_generator/tests/: test_small_tree_render.py
content_generator/tests/test_tree/: lock  sqlite.db
docs/: 0_revision.html  1_revision.html  2_revision.html  3_revision.html  I0000.html  I0001.html  I0002.html  I0003.html  I0004.html  I0005.html  I0006.html  I0007.html  I0008.html  I0009.html  I0010.html  I0011.html  I0012.html  I0013.html  I0014.html  I0015.html  I0016.html  I0017.html  I0018.html  I0019.html  I0020.html  I0021.html  I0022.html  I0023.html  I0024.html  I0025.html  I0026.html  I0027.html  I0028.html  I0029.html  I0030.html  I0031.html  I0032.html  I0033.html  I0034.html  I0035.html  (+261 more)
docs/author/: aleksandr-rakhmaev.html
docs/category/: liudi.html  stati.html
docs/feeds/: all.atom.xml
docs/images/: tree
docs/pages/: about.html  derevo-derevni.html  o-proekte.html  tree.html  vasilii-ivanov.html
docs/tag/: dokumenty.html  liudi.html  novosti.html
gramps_parser/: biographer.py  db.py  render.py  tree_parser.py
output/: authors.html  tags.html
output/feeds/: all.atom.xml
output/images/: tree
output/pages/: o-proekte.html  vasilii-ivanov.html
output/theme/css/: main.css
pages/: tree.html
tag/: dokumenty.html  liudi.html  novosti.html  podborki.html
tests/: test_small_tree_render.py
tests/test_tree/: name.txt
theme/static/css/: main.css
theme/templates/: base.html  index.html
