[tool.poetry]
name = "yanashbelyak"
version = "0.1.0"
description = ""
authors = ["Alexander Rakhmaev <rahmaevao@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"
pelican = "^4.9.1"
singleton-decorator = "^1.0.0"
markdown = "^3.5.1"
drawsvg = "^2.3.0"
ghp-import = "^2.1.0"
pillow = "^10.2.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D107",  # Missing docstring in __init__
    "RUF001",  # String contains ambiguous symbols
    "RUF002",  # Docstrings contains ambiguous symbols
    "RUF003",  # Comment contains ambiguous symbols
    "ANN", # Missing type annotation. Use mypy to check types.
    "COM812",  # Trailing comma not allowed
    "ISC001"  # Single line implicit string concatenation
]

[tool.ruff.lint.pydocstyle]
convention = "google"