[project]
name = "yanashbelyak"
version = "0.1.0"
description = ""
authors = [{ name = "Alexander Rakhmaev", email = "rahmaevao@gmail.com" }]
requires-python = "~=3.11"
readme = "README.md"
dependencies = [
    "loguru>=0.7.2,<0.8",
    "pelican>=4.9.1,<5",
    "singleton-decorator>=1.0.0,<2",
    "markdown>=3.5.1,<4",
    "drawsvg>=2.3.0,<3",
    "ghp-import>=2.1.0,<3",
    "pillow>=10.2.0,<11",
    "pelican-embed-svg>=0.0.3,<0.0.4",
    "bs4>=0.0.2,<0.0.3",
    "lxml>=5.3.0,<6",
]

[dependency-groups]
dev = [
    "ruff>=0.1.9,<0.2",
    "pytest>=8.3.3,<9",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D107",  # Missing docstring in __init__
    "RUF001",  # String contains ambiguous symbols
    "RUF002",  # Docstrings contains ambiguous symbols
    "RUF003",  # Comment contains ambiguous symbols
    "ANN", # Missing type annotation. Use mypy to check types.
    "COM812",  # Trailing comma not allowed
    "ISC001",  # Single line implicit string concatenation
    "TD003",  # Missing issue link on the line following this TODO
    "FIX002"  # Line contains TODO, consider resolving the issue
]

[tool.ruff.lint.pydocstyle]
convention = "google"
